[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/Spritesheet/sheet.png" type="Texture" id=2]
[ext_resource path="res://resources/laser_no_loop.tres" type="AudioStream" id=3]
[ext_resource path="res://assets/gameover_sound.tres" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( -1.24805, 942.218, 112.45, 76.5618 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.5677, 58.4607 )

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 2.0
step = 0.25
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0, 0, 0, 0, 0.890196, 0.101961, 0.101961, 1 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.525543, -2.10217 )
shape = SubResource( 2 )

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( 77.3505, 0.263 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )

[node name="GameOverAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
width = 15.0
default_color = Color( 0.909804, 0.0431373, 0.34902, 1 )
gradient = SubResource( 4 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
